# czkawka

./: .dockerignore  .gitignore  .mailmap  .rustfmt.toml  AGENTS.md  Cargo.toml  Changelog.md  LICENSE_CC_BY_4_ICONS  README.md  clippy.toml  justfile
.cargo/: config.toml
.github/: FUNDING.yml
cedinia/: AGENTS.md  Cargo.toml  LICENSE_CC_BY_4_ICONS  LICENSE_GPL_APP  README.md  THIRD_PARTY_LICENSES.txt  TMP_INSTALL.md  build.rs  i18n.toml
ci_tester/: Cargo.toml
czkawka_cli/: AGENTS.md  Cargo.toml  LICENSE_MIT  README.md
czkawka_core/: AGENTS.md  Cargo.toml  LICENSE_CC_BY_4_TEST_FILES  README.md  build.rs  i18n.toml
czkawka_gui/: AGENTS.md  Cargo.toml  LICENSE_CC_BY_4_ICONS  LICENSE_MIT_WINDOWS_THEME  README.md
czkawka_web/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  webgui.sh
czkawka_web/src/: embedded.rs  main.rs  scan_manager.rs  ws.rs
czkawka_web/src/api/: actions.rs  browse.rs  mod.rs  preview.rs  results.rs  scan.rs
czkawka_web/web/: app.js  app.js.bak  index.html  style.css
data/: com.github.qarmin.czkawka.desktop  com.github.qarmin.czkawka.metainfo.xml  io.github.qarmin.czkawka-web.desktop  io.github.qarmin.krokiet.desktop  io.github.qarmin.krokiet.metainfo.xml
instructions/: Instruction.md  Translations.md
krokiet/: AGENTS.md  Cargo.toml  LICENSE_CC_BY_4_AUDIO_FILES  LICENSE_CC_BY_4_ICONS  README.md  build.rs
misc/: compare_files.sh  delete_unused_krokiet_slint_imports.py  find_unused_callbacks.py  find_unused_fluent_translations.py  find_unused_settings_properties.py  find_unused_slint_translations.py  flathub.sh  (+8 more)
(+444 files in other folders)
